Fixed talkmap sizing and wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1477,7 +1477,7 @@ a:active {
   }
 .map-wrapper{
   position: relative;
-  padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */ 
+  /*padding-bottom: 56.25%; */ /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */ 
   }
 iframe{
   position: absolute;
@@ -1489,7 +1489,7 @@ iframe{
   }
 
 
-
+  
 
 
   
