--- a/assets/talkmap/leaflet_dist/screen.css
+++ b/assets/talkmap/leaflet_dist/screen.css
@@ -1,7 +1,7 @@
 
 	#map {
-		width: 800px; 
-		height: 600px; 
+		width: 100%; 
+		padding-top: 56.25%;
 		border: 1px solid #ccc;
 	}
 
